--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "outside",
   "version": "2.0.0",
   "description": "Boilerplate for WDD 330 SleepOutside project",
-  "main": "main.js",  "scripts": {
-    "start": "vite",
-    "build": "vite build --emptyOutDir && cp -r ./src/json ./dist/ && cp -r ./src/images ./dist/",
-    "lint": "eslint *.js src/**/*.js",
-    "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
-    "test": "jest",
-    "preview": "vite preview"
-  },
+  "main": "main.js",
+  "scripts": {
+  "start": "vite",
+  "build": "vite build --emptyOutDir && powershell -Command \"Copy-Item -Path ./src/public/json -Destination ./dist/json -Recurse -Force\" && powershell -Command \"Copy-Item -Path ./src/public/images -Destination ./dist/images -Recurse -Force\"",
+  "lint": "eslint *.js src/**/*.js",
+  "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
+  "test": "jest",
+  "preview": "vite preview"
+},
   "author": "Shane Thompson",
   "license": "ISC",
   "devDependencies": {
@@ -18,7 +19,7 @@
     "eslint-plugin-import": "^2.31.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "vite": "^5.4.7"
+    "vite": "^5.4.19"
   },
   "babel": {
     "presets": [
