--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
   "start": "vite",
-  "build": "vite build --emptyOutDir && powershell -Command \"Copy-Item -Path ./src/public/json -Destination ./dist/json -Recurse -Force\" && powershell -Command \"Copy-Item -Path ./src/public/images -Destination ./dist/images -Recurse -Force\"",
+  "build": "vite build --emptyOutDir && node scripts/copy-assets.js",
   "lint": "eslint *.js src/**/*.js",
   "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css}\"",
   "test": "jest",
@@ -17,9 +17,10 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.31.0",
+    "fs-extra": "^11.3.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
-    "vite": "^5.4.19"
+    "vite": "^6.3.5"
   },
   "babel": {
     "presets": [
